# camera-daemon

./: CMakeLists.txt  README.md  build.sh  camera_daemon.c  rtpworker.c  rtpworker.h  util.c  util.h
libsrtp/: CMakeLists.txt
